# RecoService

./: .editorconfig  .gitignore  .pylintrc  Dockerfile  Makefile  README.md  gunicorn.config.py  main.py  pyproject.toml  setup.cfg
.github/workflows/: tests.yml
api/: deps.py
api/api_v1/: api.py
api/api_v1/endpoints/: models.py
core/: settings.py
middleware/: auth.py  exception.py
model_dills/: popular.dill  user_knn.dill
notebooks/: Autoencoder.ipynb  Recbole.ipynb  als.ipynb  seminar_3_userknn_cv_part_3.ipynb  task.ipynb  user_knn.ipynb
schemas/: models.py
services/: model.py  userknn.py
tests/: conftest.py
tests/api_v1/: test_model.py  test_test.py
